--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="rps.js"></script>
+    <script src="rps.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <h1>Rock Paper Scissors</h1>
+            <h3>Make your selection</h3>
+        </div>
+        <div class="userButtons">
+            <button class="rockBtn">Rock</button>
+            <button class="paperBtn">Paper</button>
+            <button class="scissorsBtn">Scissors</button>
+        </div>
+        <!-- user input buttons -->
+        <!-- computer choice output -->
+    </div>
 </body>
 </html>
