adds text to show what your opponent and user chose each round

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <div class="container">
         <div class="header">
             <h1>Rock Paper Scissors</h1>
-            <h3>Make your selection</h3>
         </div>
+        <div class="computerOutput"></div>
+        <div class="userOutput"></div>
         <div class="userButtons">
             <button class="rockBtn">Rock</button>
             <button class="paperBtn">Paper</button>
