ends game when comp or user reaches 5

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="header">
             <h1>Rock Paper Scissors</h1>
         </div>
+        <div class="scoreContainer"></div>
         <div class="computerOutput"></div>
         <div class="userOutput"></div>
         <div class="userButtons">
